@@ -1,4 +1,6 @@
 2010-08-16  Piotr Fusik  <fox@scene.pl>
+* asap.spec, Makefile, win32/Makefile: build RPM for Linux
+
 * win32/Makefile, win32/apollo/ASAP_Apollo.cpp, win32/shellex/ASAPShellEx.cpp,
   win32/wasap/wasap.c: prevented gcc 4.5.0 warnings
 
